// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cards /> snapshots rendered with props 1`] = `
<div
  className="snapW-Cards snapW-Cards--row"
>
  <div>
    Hello?
  </div>
</div>
`;

exports[`<Cards /> snapshots rendered with required props 1`] = `
<div
  className="snapW-Cards snapW-Cards--row"
>
  <header
    className="snapW-Header snapW-Cards__header"
  >
    Also Available:
  </header>
  <div>
    Aye
  </div>
</div>
`;
